nambah text alamat

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="wanita">Wanita</string>
     <string name="belummenikah">BelumMenikah</string>
     <string name="menikah">Menikah</string>
-    <string name="submit">submit</string>
+    <string name="submit">Register</string>
 </resources>
